--- a/01-fundamentos/secao02-HTML-CSS/dia01-HTML-CSS/index.html
+++ b/01-fundamentos/secao02-HTML-CSS/dia01-HTML-CSS/index.html
@@ -1,10 +1,30 @@
 <!DOCTYPE html>
-<html lang="pt-br">
-  <head>
-    <meta charset="UTF-8">
-    <title>HTML</title>
-  </head>
-  <body>
-    <h1>Exercícios</h1>
-  </body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Spotify Premium - Spotify (BR)</title>
+</head>
+<body>
+  <div style="background-color: black;">
+    <img src="./images/spotify-logo.png" alt="Logotipo do spotify" width="100px">
+    <ul style="color: white;">
+      <li>Premium</li>
+      <li>Suporte</li>
+      <li>Baixar</li>
+      <li>|</li>
+      <li>Inscrever-se</li>
+      <li>Entrar</li>
+    </ul>
+  </div>
+
+  <div style="background-color: rgb(240, 55, 165);">
+    <h1>Curta o Premium grátis por 2 meses</h1>
+    <h2>Depois, pague somente R$ 19,90/mês. Cancele quando quiser.</h2>
+    <div style="background-color: black; color: white; width: 150px">COMECE AGORA</div>
+    <div style="color: black; width: 150px">VER PLANOS</div>
+    <p><a href="https://www.spotify.com/legal/premium-promotional-offer-terms" target="_blank" rel="noopener noreferrer">Sujeito a Termos e Condições.</a> Oferta de 2 meses grátis não disponível para quem já usou o Premium.</p>
+  </div>
+</body>
 </html>
