--- a/01-fundamentos/secao02-HTML-CSS/dia01-HTML-CSS/index.html
+++ b/01-fundamentos/secao02-HTML-CSS/dia01-HTML-CSS/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div style="background-color: black;">
-    <img src="./images/spotify-logo.png" alt="Logotipo do spotify" width="100px">
+    <img src="./images/spotify_logo.png" alt="Logotipo do spotify" width="100px">
     <ul style="color: white;">
       <li>Premium</li>
       <li>Suporte</li>
@@ -25,6 +25,48 @@
     <div style="background-color: black; color: white; width: 150px">COMECE AGORA</div>
     <div style="color: black; width: 150px">VER PLANOS</div>
     <p><a href="https://www.spotify.com/legal/premium-promotional-offer-terms" target="_blank" rel="noopener noreferrer">Sujeito a Termos e Condições.</a> Oferta de 2 meses grátis não disponível para quem já usou o Premium.</p>
+  </div>
+
+  <div>
+    <h2>Por que ser Premium?</h2>
+    <div>
+      <img src="./images/offline.png" alt="Sem anúncios" width="100px">
+      <h4>Modo offline.</h4>
+      <p>Ouça música onde estiver.</p>
+    </div>
+    <div>
+      <img src="./images/no-ads.png" alt="Ouça offline" width="100px">
+      <h4>Ouça músicas sem anúncios.</h4>
+      <p>Curta música sem anúncios.</p>
+    </div>
+  </div>
+
+  <div style="background-color: black; color: white">
+    <h2>Escolha seu plano Premium</h2>
+
+    <div>
+      <h3>Todos os benefícios Premium</h3>
+      <ul>
+        <li>Ouça músicas sem anúncios</li>
+        <li>Ouça em qualquer lugar — até quando estiver offline</li>
+      </ul>
+    </div>
+
+    <h3>Bandas favoritas da Turma 31:</h3>
+    <ol>
+      <li><a href="https://open.spotify.com/artist/6XyY86QOPPrYVGvF9ch6wz" target="_blank"
+          rel="noopener noreferrer">Linkin Park</a></li>
+      <li><a href="https://open.spotify.com/artist/4gzpq5DPGxSnKTe4SA8HAU" target="_blank"
+          rel="noopener noreferrer">Coldplay</a></li>
+      <li><a href="https://open.spotify.com/artist/6tw6EpC9RgmSRZiZg0n22t" target="_blank"
+          rel="noopener noreferrer">Legião Urgana</a></li>
+      <li><a href="https://open.spotify.com/artist/53XhwfbYqKCa1cC15pYq2q" target="_blank"
+          rel="noopener noreferrer">Imagine Dragons</a></li>
+    </ol>
+
+    <button><a
+      href="https://open.spotify.com/playlist/5HvqrIK0zqqmnoPHTErqkw?si=797c8d52655e46c9&pt=ad4758acdd8453c7d5f553c3c51a5e31"
+      target="_blank" rel="noopener noreferrer">OUÇA A PLAYLIST DA TURMA 31</a></button>
   </div>
 </body>
 </html>
